--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -3,59 +3,100 @@ interface Props {
 	title: string;
 	body: string;
 	href: string;
+	imageSrc: string;
 }
 
-const { href, title, body } = Astro.props;
+const { href, title, body, imageSrc } = Astro.props;
 ---
 
 <li class="link-card">
 	<a href={href}>
-		<h2>
-			{title}
-			<span>&rarr;</span>
-		</h2>
-		<p>
-			{body}
-		</p>
+		<div class="card-content">
+			{imageSrc && <img src={imageSrc} alt={title} class="card-image" />}
+			<div class="text-content">
+				<h2>{title}</h2>
+				<p>{body}</p>
+			</div>
+		</div>
 	</a>
 </li>
+
 <style>
 	.link-card {
 		list-style: none;
+		position: relative;
 		display: flex;
-		padding: 1px;
-		background-color: #23262d;
-		background-image: none;
-		background-size: 400%;
-		border-radius: 7px;
-		background-position: 100%;
-		transition: background-position 0.6s cubic-bezier(0.22, 1, 0.36, 1);
-		box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.1);
+		align-items: center;
+		justify-content: center;
+		background-color: transparent;
+		width: 100%;
+		height: 100%;
+		overflow: hidden;
 	}
+
+	.link-card::before {
+		content: "";
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background: #03A1CF;
+		z-index: 0;
+		transition: background 0.9s ease;
+		opacity: 0.8;
+	}
+
 	.link-card > a {
+		position: relative;
+		z-index: 1;
 		width: 100%;
 		text-decoration: none;
 		line-height: 1.4;
-		padding: calc(1.5rem - 1px);
-		border-radius: 8px;
 		color: white;
-		background-color: #23262d;
-		opacity: 0.8;
+		font-size: 1.25rem;
+		display: flex;
+		align-items: center;
+		justify-content: center; /* Alinea los items al principio */
+		padding: 1rem;
 	}
+
+	.card-content {
+		display: flex;
+		align-items: center;
+	}
+
+	.card-image {
+		width: 40px; /* Tamaño adecuado de la imagen */
+		height: 40px; /* Igualar ancho y alto */
+		margin-right: 1rem; /* Espacio entre la imagen y el texto */
+		object-fit: contain; /* Asegura que la imagen no se deforme */
+	}
+
+	.text-content {
+		display: flex;
+		flex-direction: column;
+	}
+
 	h2 {
 		margin: 0;
-		font-size: 1.25rem;
-		transition: color 0.6s cubic-bezier(0.22, 1, 0.36, 1);
+		color: white;
 	}
+
 	p {
-		margin-top: 0.5rem;
-		margin-bottom: 0;
+		margin: 0.5rem 0 0 0;
+		color: white;
 	}
-	.link-card:is(:hover, :focus-within) {
+
+	.link-card:hover::before {
 		background-position: 0;
-		background-image: var(--accent-gradient);
+		background-image: linear-gradient(90deg, white, #03A1CF);
+		opacity: 0.4;
 	}
-	.link-card:is(:hover, :focus-within) h2 {
-		color: rgb(var(--accent-light));
+
+	@media (max-width: 768px) {
+		.link-card {
+			width: 100%;
+		}
 	}
 </style>
